gcc/testsuite/rust/rustc/ui/match/postfix-match/pf-match-exhaustiveness_dg.rs
#![feature(postfix_match)]

fn main() {
    Some(1).match { // { dg-error ".E0004." "" { target *-*-* } }
        None => {},
    }
}

